models notebook end

--- a/consegna/05_Models.ipynb
+++ b/consegna/05_Models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following section we will show our models that we have implemented. "
+    "In the following section we show the models that we have implemented in our solution. "
    ]
   },
   {
@@ -30,8 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from run_model import run_model\n",
     "from algorithms.XGBoost import run_xgboost"
    ]
@@ -49,7 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LightGBM Standard"
+    "## LightGBM Standard\n",
+    "LightGBM_std takes into account all the different products in the dataset. We chose it for its flexibility, efficiency, speed and ability to deal with categorical features."
    ]
   },
   {
@@ -66,7 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LightGBM Cluster"
+    "## LightGBM Cluster\n",
+    "Unlike the previous model, in LightGBM_cls the dataset is restricted to clusters and we train and predict on the SKUs of the same cluster."
    ]
   },
   {
@@ -83,7 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Catboost "
+    "## CatBoost\n",
+    "CatBoost exploits all the dataset as LightGBM_std and we chose it because it is specifically designed to handle categorical data and doesn't need hard parameter tuning."
    ]
   },
   {
@@ -100,7 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XGBoost Incremental"
+    "## XGBoost Incremental\n",
+    "We chose XGBoost with an incremetal approach because it allows an incremental training, in which the model generated is unique and at each step its trees are updated, without generating new ones. This increases a lot the speed of the model at the cost of slightly worse performances."
    ]
   },
   {
@@ -116,9 +118,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# **Final Model - Stacking**\n",
-    "Our final model is based on a Stacking approach, using Linear Regression as meta-learner. The predictions inside the stacking have been taken from the models above.\n",
-    "To run the stacking, follow the guidelines on _notebooks/00 summary_"
+    "Our final model is based on a Stacking approach, using Linear Regression as meta-learner. <br> The predictions inside the stacking have been taken from the models above.\n",
+    "To run the stacking, follow the guidelines on _notebooks/00_Summary_."
    ]
   },
   {
@@ -147,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
