--- a/consegna/04_Feature_Engineering.ipynb
+++ b/consegna/04_Feature_Engineering.ipynb
@@ -484,15 +484,27 @@
     "\n",
     "- <i>exp_ma</i> feature that is a weighted average that gives exponential weights, to give more importance to the most recent values;\n",
     "\n",
-    "- difference features, that are few features that takes into account the variation across the week of a certain field, as for example <i> increment</i> that computes the difference between sales w-1 and sales w-2.\n"
+    "- difference features, that are few features that takes into account the variation across the week of a certain field, as for example <i> increment</i> that computes the difference between sales w-1 and sales w-2.\n",
+    "\n",
+    "- Gaussian Target Encoding features: these set of features takes into account only the categorical features _pack_, _brand_, _cluster_. Traditional approaches encode categorical features using One-Hot-Encoding or let the model to deal with them. Instead with Target Encoding we exploit directly the interactions among categorical variable, considering the target as a random variable. We assume that target is normally distributed, so Target Encoding can be viewed as estimating the parameters of the normal distribution. This kind of feature leads easily to overfit if not handled in the right way, since for each interaction of the features we extract the mean of the target. To prevent overfit we perform a cross-validation and apply a regularizer that works as a prior. The parameters of the posterior distribution are given by the following equations:\n",
+    "$$\n",
+    "\\mu_{post} = \\frac {\n",
+    "    \\tau_{prior} \\mu _{prior} +\n",
+    "    n \\tau \\mu_{mle}\n",
+    "}{\n",
+    "    \\tau_{prior} +  \n",
+    "    n \\tau\n",
+    "}\n",
+    "$$\n",
+    "where $\\mu_{mle}$ represents the maximum likelihood, the precision $\\tau=1/\\sigma^2_{mle}$, \\mu_{prior} represents the prior associated to its precision $\\tau_{prior} = 1/\\sigma^2_{prior}$"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "#TODO -> METTERE FEATURE GAUSSIAN"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -511,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
